<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shopping List</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list">Available Products</string>
    <string name="yourdetails">Your Details</string>
    <string name="surname">Surname:</string>
    <string name="password">Password:</string>
    <string name="telephone">Telephone:</string>
    <string name="email">Email:</string>
    <string name="county">County:</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="jobtitle">Job Title:</string>
    <string name="age">Age:</string>
    <string name="budget">Budget:</string>
    <string name="reset">Reset</string>
    <string name="next">Next&#8230;</string>
    <string name="itemname">Item Name</string>
    <string name="itemdesc">Item Description</string>
    <string name="price">€12.99</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="tenner">10.00</string>
    <string name="search">Search</string>
    <string name="listsummary">&lt;b>%1$d&lt;/b> Items, Total: &lt;b>€%2$.2f&lt;/b</string>
    <string name="title_activity_confirm">Selected Products</string>
    <string name="your_shopping_list">Your Shopping List:</string>
    <string name="email_me">Email Me</string>
    <string name="send_shopping_list">Send Shopping List</string>
    <string name="someone_gmail_com">someone@gmail.com</string>
</resources>