

<!--
    focusable/focusableInTouchMode prevents search getting focus / opening keyboard
    http://www.survivingwithandroid.com/2012/10/android-listview-custom-filter-and.html
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/txtSearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:inputType="text" >
    </EditText>

    <!--
    Reference: layout_weight=1 uses available height instead of a fixed height
    http://stackoverflow.com/questions/7253455/linearlayour-below-listview-is-not-visible
    -->

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </ListView>

    <!-- Reference complete -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_pale"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvSummary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/listsummary"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>

        <Button
            android:id="@+id/btnListNext"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/next" />

    </LinearLayout>

</LinearLayout>